2016-09-06  Daniel Bates  <dabates@apple.com>

        [iOS] WebKit2 fails to build with iOS 10 beta SDK - "'UIWKTextInteractionAssistant' may not respond to 'selectAll:'"
        https://bugs.webkit.org/show_bug.cgi?id=161663

        Reviewed by Darin Adler.

        The UIResponderStandardEditActions extensions, including the selectAll: message, are now
        part of a formal protocol by the same name as of the iOS 10 beta SDK.

        * Platform/spi/ios/UIKitSPI.h:

2016-09-06  Ryosuke Niwa  <rniwa@webkit.org>

        Enable custom elements API in Safari Technology Preview
        https://bugs.webkit.org/show_bug.cgi?id=161518

        Reviewed by Chris Dumez.

        Re-enable custom elements API in Safari Technology Preview after r203296
        now that our implementation has caught up to the latest specification changes.

        * Shared/WebPreferencesDefinitions.h:

2016-09-01  Simon Fraser  <simon.fraser@apple.com>

        Use TemporaryChange<> to maintain m_userIsInteracting
        https://bugs.webkit.org/show_bug.cgi?id=161497

        Reviewed by Tim Horton.

        Replace some error-prone manual set/clear of m_userIsInteracting with
        TemporaryChange<>.

        No behavior change.

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::mouseEvent):
        (WebKit::WebPage::keyEvent):
        (WebKit::WebPage::dispatchTouchEvent):

2016-09-06  Tim Horton  <timothy_horton@apple.com>

        Remove SwipeTransitionStyle; only Overlap has ever been used
        https://bugs.webkit.org/show_bug.cgi?id=161617

        Reviewed by Alex Christensen.

        * UIProcess/mac/ViewGestureController.h:
        * UIProcess/mac/ViewGestureControllerMac.mm:
        (WebKit::ViewGestureController::beginSwipeGesture):
        (WebKit::ViewGestureController::handleSwipeGesture):
        Remove SwipeTransitionStyle::Push, and SwipeTransitionStyle itself entirely,
        because we've never used it and it is only supported by the Mac